# rhythm-toolbox

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
docs/: io-map.md
docs/constructors-guide/: README.md
docs/musicians-guide/: README.md
docs/vibe-coders-guide/: README.md
examples/: basic_drums.cpp  led_color_test.cpp
lib/: machine.cpp  machine.h  toolbox.h
lib/core/: clock.cpp  clock.h  sequencer.cpp  sequencer.h
lib/hal/: extio.cpp  extio.h  input.cpp  input.h  io.cpp  io.h  leds.cpp  leds.h  midi.cpp  midi.h  pins.h  shiftio.cpp  shiftio.h  shiftio.pio
lib/hal/usb/: tusb_config.h  usb_descriptors.c
